<resources>
    <string name="app_name">AppRadioButton</string>
    <string name="txtPrimerValor">Ingresa el primer valor</string>
    <string name="txtSegundoValor">Ingresa el segundo valor</string>
    <string name="rbSumar">Sumar</string>
    <string name="rbRestar">Restar</string>
    <string name="rbMultiplicar">Multiplicar</string>
    <string name="rbDividir">Dividir</string>
    <string name="Button">CALCULAR</string>
    <string name="TextView_Resultado">Resultado</string>
</resources>