<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/txtValor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtPrimerValor"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtValor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtSegundoValor"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtValor1" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtValor2">

        <RadioButton
            android:id="@+id/rbSuma"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/rbSumar"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rbResta"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/rbRestar"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rbMultiplicar"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/rbMultiplicar"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rbDividir"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/rbDividir"
            android:textSize="24sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtView"
        android:layout_width="138dp"
        android:layout_height="34dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:text="@string/TextView_Resultado"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="44dp"
        android:onClick="Calcular"
        android:text="@string/Button"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>